browse-my-repos: fix added human-readable bytes

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -366,7 +366,7 @@ footer a:hover {
 
 #scripts-content, #browse-display, #browse-content {
     position: relative;
-    width: min(140%, 98vw);
+    width: min(140%, 96vw);
     left: clamp(-20%, calc(400px - 50vw), 0px);
     /* max-width: 98vw; */
 }
@@ -385,11 +385,10 @@ footer a:hover {
     /* .inner {
         max-width: 578px !important;
     } */
-    #scripts-content, #browse-display, #browse-content { 
+    /* #scripts-content, #browse-display, #browse-content { 
         position: static !important;
         width: 100% !important;
-        left: 0% !important;
-    }
+    } */
     #show-text, .line-numbers {
         font-size: 70% !important;
     }
